# SGraph-AI__Service__Playwright

./: .env.example  .gitignore  .write-test  README.md  capabilities.json  docker-compose.local-claude.yml  docker-compose.yml  index.html  lambda_entry.py  pyproject.toml  requirements.txt  version
sg_compute/: pyproject.toml
sg_compute/brief/: 02__architecture.md  03__package_structure.md  04__helpers_layer.md  05__stack_contract.md  06__open_design_stack.md  07__ollama_stack.md
sg_compute/catalog/enums/: Enum__Stack__Type.py
sg_compute/catalog/schemas/: Schema__Caller__IP.py
sg_compute/cli/: Cli__Compute.py  Cli__Compute__Node.py  Cli__Compute__Pod.py  Cli__Compute__Spec.py  Cli__Compute__Stack.py  Cli__SG.py  Cli__SG__Repl.py  Renderers.py  Spec__CLI__Loader.py
sg_compute/cli/base/: Schema__Spec__CLI__Spec.py  Spec__CLI__Builder.py  Spec__CLI__Defaults.py  Spec__CLI__Errors.py  Spec__CLI__Renderers__Base.py  Spec__CLI__Resolver.py
sg_compute/control_plane/: Fast_API__Compute.py  Spec__Routes__Loader.py  lambda_handler.py
sg_compute/control_plane/routes/: Routes__Compute__AMIs.py  Routes__Compute__Catalog.py  Routes__Compute__Health.py  Routes__Compute__Nodes.py  Routes__Compute__Pods.py  Routes__Compute__Specs.py  Routes__Compute__Stacks.py
sg_compute/core/event_bus/: Event__Bus.py
sg_compute/core/node/: Node__Manager.py
sg_compute/core/pod/: Pod__Manager.py  Sidecar__Client.py
sg_compute/core/spec/: Spec__Loader.py  Spec__Readme__Resolver.py  Spec__Registry.py  Spec__Resolver.py  Spec__Service__Base.py  Spec__UI__Resolver.py
sg_compute/fast_api/: Fast_API__TLS__Launcher.py  Schema__Fast_API__TLS__Config.py
sg_compute/fast_api/tls/: Fast_API__TLS.py  Routes__TLS.py  lambda_handler.py
sg_compute/helpers/aws/: EC2__Instance__Helper.py  EC2__SG__Helper.py  EC2__Stack__Mapper.py
sg_compute/helpers/networking/: Stack__Name__Generator.py
sg_compute/host_plane/fast_api/: Fast_API__Host__Control.py  exception_handlers.py  lambda_handler.py
sg_compute/image/collections/: List__Schema__Image__Stage__Item.py  List__Str.py
sg_compute/image/schemas/: Schema__Image__Build__Request.py  Schema__Image__Build__Result.py  Schema__Image__Stage__Item.py
sg_compute/image/service/: Image__Build__Service.py
sg_compute/primitives/: Safe_Int__Disk__GB.py  Safe_Int__Exit__Code.py  Safe_Int__Hours.py  Safe_Int__Log__Lines.py  Safe_Int__Max__Hours.py  Safe_Int__Pids.py  Safe_Int__Port.py  Safe_Int__Uptime__Seconds.py  Safe_Str__AWS__Region.py  Safe_Str__Api__Key.py  Safe_Str__Docker__Image.py  Safe_Str__IP__Address.py  Safe_Str__Image__Registry.py  Safe_Str__Image__Tag.py  Safe_Str__Instance__Type.py  Safe_Str__Log__Content.py  Safe_Str__Message.py  Safe_Str__Node__Id.py  Safe_Str__Node__Name.py  Safe_Str__Ollama__Model.py  Safe_Str__Platform__Name.py  Safe_Str__Pod__Name.py  Safe_Str__SG__Id.py  Safe_Str__SSM__Path.py  Safe_Str__Spec__Id.py  Safe_Str__Stack__Id.py  Safe_Str__Stack__Name.py
sg_compute/primitives/enums/: Enum__Node__State.py  Enum__Pod__State.py  Enum__Spec__Capability.py  Enum__Spec__Nav_Group.py  Enum__Spec__Stability.py  Enum__Stack__Creation_Mode.py
sg_compute/vault/collections/: List__Schema__Vault__Write__Receipt.py  List__Vault__Handle.py
sg_compute/vault/enums/: Enum__Vault__Error_Code.py
sg_compute/vault/primitives/: Safe_Int__Bytes.py  Safe_Str__ISO_Datetime.py  Safe_Str__SHA256.py  Safe_Str__Spec__Type_Id.py  Safe_Str__Stack__Id.py  Safe_Str__Vault__Handle.py  Safe_Str__Vault__Path.py
sg_compute/vault/schemas/: Schema__Vault__Delete__Response.py  Schema__Vault__List__Response.py  Schema__Vault__Write__Receipt.py
sg_compute/vault/service/: Vault__Spec__Writer.py
sg_compute_specs/: pyproject.toml
sg_compute_specs/docker/: manifest.py
sg_compute_specs/docker/cli/: Cli__Docker.py  Renderers.py
sg_compute_specs/docker/collections/: List__Port.py  List__Schema__Docker__Info.py
sg_compute_specs/docker/enums/: Enum__Docker__Stack__State.py
sg_compute_specs/docker/primitives/: Safe_Str__Docker__Stack__Name.py  Safe_Str__IP__Address.py
sg_compute_specs/docker/schemas/: Schema__Docker__Create__Request.py  Schema__Docker__Create__Response.py  Schema__Docker__Delete__Response.py  Schema__Docker__Health__Response.py  Schema__Docker__Info.py  Schema__Docker__List.py
sg_compute_specs/docker/service/: Caller__IP__Detector.py  Docker__AMI__Helper.py  Docker__AWS__Client.py  Docker__Health__Checker.py  Docker__Instance__Helper.py  Docker__Launch__Helper.py  Docker__SG__Helper.py  Docker__Service.py  Docker__Stack__Mapper.py  Docker__Tags.py  Docker__Tags__Builder.py  Docker__User_Data__Builder.py  Random__Stack__Name__Generator.py
sg_compute_specs/docker/tests/: test_Docker__Launch__Helper.py  test_Docker__Stack__Mapper.py  test_Docker__Tags__Builder.py  test_Docker__User_Data__Builder.py  test_manifest.py
sg_compute_specs/elastic/: manifest.py
sg_compute_specs/elastic/collections/: List__Schema__Elastic__Health__Check.py  List__Schema__Elastic__Info.py
sg_compute_specs/elastic/enums/: Enum__Elastic__Probe__Status.py  Enum__Elastic__State.py  Enum__Health__Status.py  Enum__Kibana__Probe__Status.py
sg_compute_specs/elastic/primitives/: Safe_Str__Diagnostic.py  Safe_Str__Elastic__Password.py  Safe_Str__Elastic__Stack__Name.py  Safe_Str__IP__Address.py
sg_compute_specs/elastic/schemas/: Schema__Elastic__Create__Request.py  Schema__Elastic__Create__Response.py  Schema__Elastic__Delete__Response.py  Schema__Elastic__Info.py  (+3 more)
sg_compute_specs/firefox/: README.md  manifest.py
sg_compute_specs/local_claude/: manifest.py
sg_compute_specs/mitmproxy/: manifest.py
sg_compute_specs/neko/: manifest.py
sg_compute_specs/ollama/: manifest.py
sg_compute_specs/open_design/: manifest.py
sg_compute_specs/opensearch/: manifest.py
sg_compute_specs/playwright/: Dockerfile  README.md  manifest.py  requirements.txt  version
sg_compute_specs/podman/: manifest.py
sg_compute_specs/prometheus/: manifest.py
sg_compute_specs/vault_app/: manifest.py
sg_compute_specs/vault_publish/: manifest.py
sg_compute_specs/vnc/: manifest.py
(+2969 files in other folders)
