[tool.poetry]
name        = "sgraph-ai-service-playwright"
version     = "v0.2.28"
description = "Browser automation FastAPI service for the SG/Send ecosystem. Runs identically on laptop, CI, Claude Web, Fargate, and Lambda."
authors     = ["Dinis Cruz <dinis@the-cyber-boardroom.com>"]
license     = "Apache-2.0"
readme      = "README.md"
packages    = [{ include = "sg_compute"                        },
               { include = "sg_compute_specs"                  },
               { include = "sgraph_ai_service_playwright__cli" },
               { include = "scripts"                           }]
include     = ["sgraph_ai_service_playwright__cli/version"]

[tool.poetry.dependencies]
python                       = "^3.12"
fastapi                      = "*"
uvicorn                      = "*"
requests                     = "*"
httpx                        = "*"
playwright                   = "*"
osbot-utils                  = "*"
osbot-aws                    = "*"
osbot-fast-api               = "*"
osbot-fast-api-serverless    = "*"
prometheus-client            = "*"
cryptography                 = "*"
acme                         = "*"
josepy                       = "*"
typer                        = "*"

[tool.poetry.scripts]
sg         = "sg_compute.cli.Cli__SG:app"                                               # primary alias — spec-driven aggregator
sgc        = "sg_compute.cli.Cli__SG:app"                                               # short alias (sg-compute)
sg-compute = "sg_compute.cli.Cli__SG:app"                                               # full hyphenated alias
sp         = "sg_compute.cli.Cli__SG:app"                                               # legacy alias — kept for backward compat
sp-cli     = "scripts.run_sp_cli:main"                                                  # Run the SP CLI FastAPI app locally under uvicorn (Lambda-equivalent surface; see scripts/run_sp_cli.py)
sg-repl    = "sg_compute.cli.Cli__SG__Repl:run_repl"                                    # interactive REPL with as <role> support

[tool.poetry.group.dev.dependencies]
pytest         = "*"
pytest-timeout = "*"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"                                                     # Avoid basename collisions between sibling test modules with the same filename across different test dirs. Test dirs stay __init__.py-free per CLAUDE.md §20.

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
